--- a/space.kv
+++ b/space.kv
@@ -44,10 +44,16 @@
             source: 'images/space.jpg'
 
     Label:
-        font_size: 40
+        font_size: root.height / 15
         center_x: root.width / 10
         top: root.height / 5
         text: str(root.score)
+
+    Label:
+        font_size: root.height / 15
+        center_x: root.width / 2
+        top: root.height / 2
+        text: str(root.message)
 
     SpaceShip:
         id: game_ship
